--- a/index.html
+++ b/index.html
@@ -310,30 +310,120 @@
     <div id="instructionModal" class="modal-overlay" onclick="closeInstruction(event)">
         <div class="modal">
             <div class="modal-header">
-                <span>Инструкция пользователя (Полная)</span>
+                <span>Инструкция пользователя. Приятной сборки!</span>
                 <button class="top-btn" onclick="document.getElementById('instructionModal').style.display='none'">✖</button>
             </div>
             <div class="modal-body">
-                <div class="algo-box">
-                    <span class="algo-title">💡 Быстрый старт:</span>
-                    <ol>
-                        <li>Загрузите фото (или перетащите его в окно).</li>
-                        <li>Выберите размер схемы (S, M, L, XL или свой).</li>
-                        <li>Выберите стиль обработки.</li>
-                        <li>Настройте резкость и палитру.</li>
-                        <li>В режиме Схемы (Полноэкранном) нажимайте на цифры для отметки рядов.</li>
-                    </ol>
-                </div>
-                <h3>🧐 Кнопки управления</h3>
-                <ul style="list-style: none; padding-left: 0; line-height: 2;">
-                    <li>✏️ <b>Карандаш</b> — Режим рисования по схеме (ручная правка пикселей).</li>
-                    <li>↶ <b>Отмена</b> — Отмена последнего действия рисования.</li>
-                    <li>↻ <b>Обновить</b> — Сгенерировать новые цвета (для AI стилей).</li>
-                    <li>↺ <b>Сброс</b> — Сброс настроек к черно-белому и дефолтным параметрам.</li>
-                    <li>🔒 <b>Замок</b> — Закрепить картинку от случайного сдвига пальцем.</li>
-                    <li>⛶ <b>Полноэкранный режим</b> — Основной режим для сборки.</li>
-                </ul>
-            </div>
+    <div class="algo-box" style="background: rgba(255, 215, 0, 0.15); border: 2px solid #ffd700; margin-bottom: 25px;">
+        <span class="algo-title" style="color: #d4a000; font-size: 18px;">🚀 Быстрый старт:</span>
+        <ul style="margin-top: 5px; padding-left: 20px;">
+            <li>Загрузите фото (или перетащите его в окно).</li>
+            <li>Выберите размер схемы (S, M, L, XL или свой). Отмасштабируйте по ширине и высоте.</li>
+            <li>Выберите стиль обработки.</li>
+            <li>Проверьте в режиме <b>Схемы</b>. 
+В Полноэкранном режиме нажимайте на цифры рядов или строк для отметки и собирайте.</li>
+        </ul>
+    </div>
+
+    <p>Это инструмент для создания схем сборки картин из блоков по любой фотографии.</p>
+
+    <div class="algo-box">
+        <span class="algo-title">💡 Совет 1: Масштабирование</span>
+        Чем меньше блоков/пикселей по ширине, тем крупнее кадрируйте объект (лицо, морда животного и т. д.) — при 50х50 оптимально делать лицо по всей ширине.
+    </div>
+
+    <h3>1. Основной рабочий процесс</h3>
+    <p>Процесс создания шедевра состоит из 5 простых шагов:</p>
+    <ul>
+        <li><b>Загрузка:</b> Нажмите «Загрузить фото» или просто перетащите изображение в окно браузера.</li>
+        <li><b>Геометрия:</b> Выберите размер (S, M, L, XL) и настройте кадрирование (зум и сдвиг), чтобы в фокусе осталось самое важное.</li>
+        <li><b>Стиль:</b> Выберите цветовую схему. Для большинства портретов идеально подходит «Черно-белый» или «ЛЕГО».</li>
+        <li><b>Тонкая настройка:</b> Подкрутите контраст, резкость и сглаживание.</li>
+        <li><b>Сборка:</b> Перейдите во вкладку «Схема» и включите полноэкранный режим для удобной работы.</li>
+    </ul>
+
+    <h3>2. Описание инструментов и панелей</h3>
+
+    <h4>📍 Левая панель (Настройки)</h4>
+    <ul>
+        <li><b>РАЗМЕР:</b>
+            <ul><li><b>Пресеты:</b> От 50x50 (S) до 150x150 (XL) кубиков.</li></ul>
+        </li>
+        <li><b>Рамка:</b> Позволяет добавить окантовку (от 1 до 5 рядов) любого цвета из палитры.</li>
+        <li><b>КАДРИРОВАНИЕ:</b> Позволяет приблизить лицо или объект и сдвинуть его по осям X и Y, не обрезая исходный файл вручную.</li>
+        <li><b>СТИЛИ ПАЛИТРЫ:</b> (См. раздел 3).</li>
+    </ul>
+
+    <div class="algo-box" style="border-color: #28a745; background: rgba(40, 167, 69, 0.1);">
+        <span class="algo-title" style="color: #28a745;">💡 Совет 2</span>
+        Не забывайте сохранять проект!
+    </div>
+
+    <ul>
+        <li><b>НАСТРОЙКИ ФОТО:</b>
+            <ul>
+                <li><i>Постеризация:</i> Упрощает переходы цветов, делая картинку более «плакатной».</li>
+                <li><i>Сглаживание:</i> Убирает лишний «шум» и мелкие точки на коже.</li>
+                <li><i>Резкость:</i> <b>Самый важный инструмент.</b> Высокая резкость делает границы кубиков четкими. Вы можете менять силу (%) и радиус.</li>
+                <li><i>Яркость/Контраст:</i> Базовая коррекция освещения.</li>
+            </ul>
+        </li>
+        <li><b>ДЕТАЛИ СБОРКИ:</b>
+            <ul>
+                <li>Автоматический подсчет количества кубиков каждого цвета.</li>
+                <li><b>Калькулятор бюджета:</b> введите цену за 1 кубик.</li>
+            </ul>
+        </li>
+    </ul>
+
+    <div class="algo-box" style="border-color: #ffd700;">
+        <span class="algo-title">💡 Совет 3</span>
+        Не бойтесь использовать <b>✏️ Карандаш</b> — добавляйте или удаляйте лишние пиксели нужным цветом.
+    </div>
+
+    <h4> Верхняя панель (Управление)</h4>
+    <ul>
+        <li><b>↶ Отмена:</b> Отменяет последние 10 действий (включая рисование карандашом).</li>
+        <li><b>✏️ Карандаш:</b> Позволяет вручную перекрашивать пиксели прямо на превью.</li>
+        <li><b>🔓 БЛОК:</b> Отключает масштабирование и сдвиг фото пальцами (полезно на смартфонах).</li>
+        <li><b>🔍 Зум схемы:</b> Настройка масштаба сетки в режиме «Схема».</li>
+        <li><b>⛶ Полноэкранный режим:</b> Убирает всё лишнее. В этом режиме нажатие на цифру ряда или колонки закрашивает их тенью.</li>
+    </ul>
+
+    <div class="algo-box">
+        <span class="algo-title">💡 Совет 4</span>
+        Если при нажатии кнопки <b>«ОБНОВИТЬ»</b> вы проскочили лучшую генерацию, нажмите кнопку <b>«↶ Отмена»</b> — она хранит в памяти 10 последних шагов.
+    </div>
+
+    <h3>3. Гид по стилям палитры</h3>
+    <ul>
+        <li><b>Черно-белый:</b> Классические 5 оттенков серого. Идеально для стильных портретов.</li>
+        <li><b>ЛЕГО:</b> 5 ярких базовых цветов. Для контрастных и веселых картинок.</li>
+        <li><b>Оригинал (Smart AI):</b> Программа анализирует фото и выбирает самые частые цвета.</li>
+        <li><b>Умный Неон:</b> Генерирует яркую светящуюся палитру с математически выверенной яркостью.</li>
+        <li><b>Свой AI (Реколор):</b> <small>!!! В разработке !!!</small> (Вы задаете свое количество блоков, а программа предлагает вариант).</li>
+        <li><b>Случайный (Хаос):</b> Полный рандом цветов. Не бойтесь его — и в Хаосе проскакивают шедевры!</li>
+        <li><b>Свой (Градиент):</b> Вы сами задаёте палитру цвета и жмёте «ОБНОВИТЬ» (от темного к светлому).</li>
+    </ul>
+
+    <h3>4. Инструменты "Хирургической" правки</h3>
+    <ul>
+        <li><b>Ручное редактирование:</b> Если остался "одинокий" кубик — выберите цвет и кликните по нему Карандашом.</li>
+        <li><b>Обновление палитры (↻):</b> В стилях AI кнопка «Обновить» перегенерирует оттенки, не меняя структуру фото.</li>
+    </ul>
+
+    <h3>5. Сохранение и Печать</h3>
+    <ul>
+        <li><b>Сохранить проект:</b> Скачивает .json файл со всеми настройками и прогрессом.</li>
+        <li><b>Загрузить проект:</b> Восстанавливает работу с того же места.</li>
+        <li><b>Печать (🖨):</b> Генерирует PDF с общим видом, списком цветов и секторами схемы.</li>
+    </ul>
+
+    <div class="algo-box" style="border-color: #ff5555; background: rgba(255, 85, 85, 0.1);">
+        <span class="algo-title" style="color: #ff5555;">💡 Совет 5</span>
+        Перед печатью или сборкой всегда проверяйте «Резкость» (оптимально 150-200%), чтобы детали не превратились в «кашу».
+    </div>
+</div>
         </div>
     </div>
 
