--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>PhotoBrick Pro v1.6.5 </title>
+    <title>PhotoBrick Pro v1.6.6 </title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
     <style>
@@ -275,7 +275,7 @@
                 display: flex; 
                 flex-direction: column; 
                 height: 100dvh; 
-                padding: 10px; /* Отступ от края экрана */
+                padding: 4px; /* Отступ от края экрана */
                 gap: 10px !important; /* ЗАЗОР МЕЖДУ ВЕРХНИМ И НИЖНИМ ОКНОМ */
                 overflow: hidden; 
             }
@@ -298,7 +298,7 @@
             .header-bar { 
                 position: relative; /* Она теперь часть потока */
                 width: 100%;
-                padding: 10px;
+                padding: 6px 8px;
                 background: rgba(0,0,0,0.1); /* Легкое затемнение для разделения */
                 flex-shrink: 0; /* Не сжимать шапку */
                 z-index: 20;
@@ -706,7 +706,7 @@
             </div>
             
             <div style="text-align:center; font-size:10px; color:var(--text-sec); margin-top:20px; opacity:0.6;">
-                PhotoBrick Pro v1.6 PDF Edition
+                PhotoBrick Pro v1.6.6
             </div>
         </aside>
 
