--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
                       }
                  } else {
                      generatedMatrix = []; const steps = currentPalette.length; const thresholdStep = 255 / steps; 
-                     for(let y=0; y<h; y++) { let row = []; for(let x=0; x<w; x++) { const i = (y*w+x)*4; const r = finalData[i], g = finalData[i+1], b = finalData[i+2]; let lum = 0.299*r + 0.587*g + 0.114*b; let idx = Math.floor(lum / thresholdStep); if (idx >= steps) idx = steps - 1; if(idx < 0) idx = 0; row.push(idx); row.push(idx); } generatedMatrix.push(row); }
+                     for(let y=0; y<h; y++) { let row = []; for(let x=0; x<w; x++) { const i = (y*w+x)*4; const r = finalData[i], g = finalData[i+1], b = finalData[i+2]; let lum = 0.299*r + 0.587*g + 0.114*b; let idx = Math.floor(lum / thresholdStep); if (idx >= steps) idx = steps - 1; if(idx < 0) idx = 0; row.push(idx); } generatedMatrix.push(row); }
                  }
             } else { 
                 const structurePalette = (['custom_ai', 'random_chaos'].includes(preset) && aiBasePalette.length > 0) ? aiBasePalette : currentPalette; const paletteRGB = structurePalette.map(hex => { const r = parseInt(hex.slice(1,3), 16); const g = parseInt(hex.slice(3,5), 16); const b = parseInt(hex.slice(5,7), 16); return {r,g,b}; }); generatedMatrix = []; for(let y=0; y<h; y++) { let row = []; for(let x=0; x<w; x++) { const i = (y*w+x)*4; let oldR = finalData[i], oldG = finalData[i+1], oldB = finalData[i+2]; let bestIdx = 0, minDist = Infinity; paletteRGB.forEach((c, idx) => { const dist = Math.sqrt(Math.pow(c.r-oldR,2) + Math.pow(c.g-oldG,2) + Math.pow(c.b-oldB,2)); if(dist < minDist) { minDist = dist; bestIdx = idx; } }); row.push(bestIdx); } generatedMatrix.push(row); } }
