--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>PhotoBrick Pro v1.6.7 </title>
+    <title>PhotoBrick v1.6.9 </title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
     <style>
@@ -191,6 +191,9 @@
             max-height: 65vh;  
             border-radius: 8px;  
             box-shadow: 0 10px 30px rgba(0,0,0,0.3);  
+            border: 1px solid var(--primary);
+            padding: 1px;
+            background: var(--glass-bg);
             object-fit: contain !important; /* Картинка всегда сохраняет пропорции */
             display: block;  
             pointer-events: none;
@@ -707,7 +710,7 @@
             </div>
             
             <div style="text-align:center; font-size:10px; color:var(--text-sec); margin-top:20px; opacity:0.6;">
-                PhotoBrick Pro v1.6.7
+                PhotoBrick v1.6.9
             </div>
         </aside>
 
