--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
              border: none !important;
              box-shadow: none !important;
              background: transparent !important;
-             border-radius: 0 !important; /* Скругление берется от обертки */
+             border-radius: 9px !important; /* Скругление берется от обертки */
         }
         
 .preview-label {
@@ -3416,3 +3416,4 @@ function cycleLayoutMode() {
     </script>
 </body>
 </html>
+
