--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>PhotoBrick v2.3.5</title>
+
+<link rel="manifest" href="manifest.json">
+<link rel="icon" type="image/png" href="icon.png">
+
+<meta name="theme-color" content="#1e1e24" media="(prefers-color-scheme: dark)">
+<meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="PhotoBrick">
+<link rel="apple-touch-icon" href="icon.png">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
     <style>
@@ -3848,6 +3860,15 @@ function resetGridVisibility() {
 const eyeButton = document.getElementById('reset-lines-btn'); 
 if (eyeButton) {
     eyeButton.onclick = resetGridVisibility;
+}
+
+// --- PWA REGISTRATION ---
+if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./sw.js')
+            .then(reg => console.log('PWA Service Worker registered'))
+            .catch(err => console.log('PWA Service Worker failed', err));
+    });
 }
     </script>
 <div id="loadingOverlay" class="loading-overlay">
